# vids

./: LICENSE
python_packaging_two/003_pre_commit_script/: calculator.py
python_packaging_two/006_running/: pyproject.toml
python_packaging_two/007_running/: pyproject.toml
python_packaging_two/009_relative_vs_absolute/calculator_pkg_ex.egg-info/: PKG-INFO
python_packaging_two/011_file_calculator/calculator_pkg_ex/: __main__.py
python_packaging_two/012_test_calculator/: pyproject.toml
python_packaging_two/013_test_file_calculator/calculator_pkg_ex/: __init__.py  calculator.py
python_packaging_two/015_mypy_strict/calculator_pkg_ex/: calculator.py
python_packaging_two/016_py_typed/calculator_pkg_ex/: __init__.py  __main__.py
python_packaging_two/016_py_typed/scripts/: run.py
python_packaging_two/019_requirements_files/: pyproject.toml  requirements_dev.txt
python_packaging_two/020_tox/: pyproject.toml  requirements_dev.txt  tox.ini
python_packaging_two/021_readme/: pyproject.toml  requirements_dev.txt
python_packaging_two/021_readme/calculator_pkg_ex/: calculator.py
python_packaging_two/021_readme/scripts/: run.py
python_packaging_two/022_manifest/: pyproject.toml
python_packaging_two/023_pyproject_final/: pyproject.toml
python_packaging_two/023_pyproject_final/calculator_pkg_ex/: __main__.py
python_packaging_two/024_pyproject_final_w_patch/: MANIFEST.in  pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini
python_packaging_two/024_pyproject_final_w_patch/calculator_pkg_ex/: __main__.py
(+15 files in other folders)
