[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "calculator_pkg_ex"
version = "0.9.0"
dependencies = [
    "tqdm~=4.0"
]

[project.scripts]
calculator_pkg_ex = "calculator_pkg_ex.__main__:main"

[project.optional-dependencies]
test = [
    "pytest==9.0.2",
    "mypy==1.19.1",
    "ruff==0.14.10",
    "pre-commit==4.5.1",
]